--- a/1.html
+++ b/1.html
@@ -17,6 +17,8 @@ border-bottom-style: dotted;
 <h2><big style="color: rgb(102, 0, 0);"><big><big>Answers
 will be loaded soon...</big></big></big></h2>
 </marquee>
+// Added good title.
+<h1>One of the best quiz ever made on this platform</h1>
 <table style="text-align: left;" border="2" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
